--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@remix-run/eslint-config": "^2.3.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.38.0",
-    "typescript": "^5.1.6"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=18.0.0"
