--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "build": "remix build",
     "dev": "remix dev --manual",
     "start": "remix-serve ./build/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "types:pregen": "npx supabase start",
+    "types:gen": "npx supabase gen types typescript --project-id"
   },
   "dependencies": {
     "@remix-run/css-bundle": "^2.3.0",
     "@remix-run/node": "^2.3.0",
     "@remix-run/react": "^2.3.0",
     "@remix-run/serve": "^2.3.0",
+    "@supabase/auth-helpers-remix": "^0.2.6",
+    "@supabase/supabase-js": "^2.38.5",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -26,6 +30,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.38.0",
     "postcss": "^8.4.31",
+    "supabase": "^1.113.2",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
   },
