--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@remix-run/serve": "^2.3.0",
     "@supabase/auth-helpers-remix": "^0.2.6",
     "@supabase/supabase-js": "^2.38.5",
+    "@types/uuid": "^9.0.7",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.3.0",
