--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/serve": "^2.3.0",
     "@supabase/auth-helpers-remix": "^0.2.6",
     "@supabase/supabase-js": "^2.38.5",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "@types/uuid": "^9.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.292.0",
     "ms": "^2.1.3",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
