chore: create project dialog

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "types:gen": "npx supabase gen types typescript --project-id"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@remix-run/css-bundle": "^2.3.0",
     "@remix-run/node": "^2.3.0",
